name:                backlog-queue
version:             0.1.0
synopsis:            Provides a bounded queue supporting length querying and callbacks.
description:         Please see README.md
homepage:            https://github.com/mtesseract/backlog-queue#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           (c) 2017 Moritz Schulte
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Control.Concurrent.BacklogQueue
  build-depends:        base >= 4.7 && < 5
                      , classy-prelude
                      , stm
  default-extensions:   NoImplicitPrelude
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/mtesseract/backlog-queue
